eliminate overlap of menu button, fix language mobile style

--- a/components/HomeContent/homeContent.module.css
+++ b/components/HomeContent/homeContent.module.css
@@ -1,5 +1,6 @@
 .container {
   text-align: center;
+  padding-top: 1rem;
 }
 
 .imgWrapper {
